<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">中幼在线</string>
    <string name="label_settings">Settings</string>
    <string name="msg_welcome_message">Welcome to Open Video Call!</string>
    <string name="label_channel_name_hint">Channel name</string>
    <string name="label_encryption_key_hint">Encryption key</string>
    <string name="label_join">Join</string>
    <string name="label_confirm">Confirm</string>
    <string name="label_send">Send</string>
    <string name="msg_say_something">Say something…</string>
    <string name="msg_no_network_connection">No network connection, please check the network settings</string>
    <string name="label_title_resolution">Resolution\n(Width * Height)</string>
    <string name="label_title_frame_rate">Frame Rate\n(fps)</string>
    <string name="label_title_bit_rate">Bit Rate\n(kbps)</string>
    <string name="bit_rate_value_with_unit">%d kbps</string>
    <string name="frame_rate_value_with_unit">%d fps</string>
    <string name="color_picker">颜色选择器</string>
    <string name="network_err_toast">网络异常,请检查网络配置</string>
    <string name="not_download">未下载</string>
    <string name="action_download">下载</string>
    <string name="app_storage_show">下载和运行空间不足，请先清理系统空间！</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="forum_meeting_public">公开\n会议</string>
    <string name="forum_meeting_private">受邀\n会议</string>
    <string name="room_set" translatable="false">设置</string>
    <string name="room_version" translatable="false">版本</string>
    <string name="room_banned" translatable="false">禁音</string>
    <string name="room_speak" translatable="false">发言</string>
    <string name="room_fy" translatable="false">我要发言</string>
    <string name="room_fz" translatable="false">翻转</string>
    <string name="room_fullscreen" translatable="false">全屏</string>
    <string name="room_banged" translatable="false">退出</string>
    <string name="label_meet_desc">会议摘要：</string>
    <string name="label_meet_time">会议开始时间：</string>
    <string name="label_meet_class">会议类型：</string>
    <string name="label_meet_info">会议资料</string>
    <string name="bt_login">登录</string>
    <string name="bt_bind">绑定</string>
    <string name="bt_getcode_text">获取验证码</string>
    <string name="bt_login_other">第三方登录方式</string>
    <string name="bt_confirm">确定</string>
    <string name="bt_cancel">取消</string>
    <string name="bt_not_prompt">不再提醒</string>
    <string name="bt_save">保存</string>
    <string name="bt_exit">退出</string>
    <string name="bt_update">立即升级</string>
    <string name="bt_later">以后再说</string>
    <string name="bt_leave">结束</string>
    <string name="bt_leave_stand">暂时离开</string>
    <string name="bt_meet_discuss">讨论</string>
    <string name="bt_send">发送</string>
    <string name="bt_refresh">刷新</string>
    <string name="bt_close">关闭</string>
    <string name="bt_qrcode_login">微信扫码登录</string>
    <string name="bt_apply">申请</string>
    <string name="bt_agree">同意</string>
    <string name="bt_refuse">拒绝</string>
    <string name="bt_micro">连麦</string>
    <string name="bt_micro_off">关麦</string>
    <string name="bt_camera">打开摄像头</string>
    <string name="bt_camera_off">关闭摄像头</string>
    <string name="bt_leave2">立即离开</string>
    <string name="bt_later2">稍后再说</string>
    <string name="bt_goto">立即就去</string>
    <string name="alt_sdk_disabled">扩展卡不可用</string>
    <string name="txt_phone">请输入手机号码</string>
    <string name="txt_code">请输入验证码</string>
    <string name="txt_bind_title">绑定微信</string>
    <string name="txt_bind_alert">绑定后无需输入手机号密码登录，更便捷</string>
    <string name="txt_started">未开始</string>
    <string name="txt_raged">进行中</string>
    <string name="meet_state_complete">已结束</string>
    <string name="bar_online">在线</string>
    <string name="bar_offline">离线</string>
    <string name="bar_log">记录</string>
    <string name="bar_meet">会议</string>
    <string name="bar_search">搜索</string>
    <string name="bar_profile">我的</string>
    <string name="label_nickname">昵称</string>
    <string name="label_user_name">姓名</string>
    <string name="label_meet_users">参会人数</string>
    <string name="label_quit_alert">您确定要离开吗？</string>
    <string name="label_hot_city">热点城市</string>
    <string name="label_sync_loading">正在下载升级包...</string>
    <string name="alt_update">%1$s%2$s版本发布了。\r\n是否立即升级到最新版？</string>
    <string name="alt_upgrade_down_error">下载失败，请稍后再试。</string>
    <string name="alt_upgrade_down_loading">正在下载升级包，请稍后...</string>
    <string name="alt_list_loading">正在加载数据，请稍后...</string>
    <string name="alt_create_file_fail">创建文件失败</string>
    <string name="alt_message_null">不能发送空消息</string>
    <string name="dlg_title">温馨提示</string>
    <string name="dlg_apply_vide">申请视频互动</string>
    <string name="dlg_apply_call">申请通话</string>
    <string name="dlg_apply_call_desc">您没有权限进行通话，需向主持人申请！</string>
    <string name="dlg_apply_video_desc">您没有权限进行视频互动，需向主持人申请！</string>
    <string name="dlg_apply_call_success">申请已发送，请等待主持人授权</string>
    <string name="dlg_apply_call_error">申请发送失败</string>
    <string name="dlg_participand_title">所有参会人员</string>
    <string name="dlg_repeat_click_flag">您已经点过赞了</string>
    <string name="dlg_meet_finish">已结束，是否立即离开？</string>
    <string name="dlg_not_network">网络已断开，请稍后再试</string>
    <string name="dlg_edit_userinfo">是否去编辑详细个人资料？</string>
    <string name="dlg_exception">程序出错了</string>
    <string name="dialog_title_settings">分辨率设置</string>
    <string name="label_video_fluent">\t\t流畅（480*360）</string>
    <string name="label_video_standard">\t\t标准（640*480）</string>
    <string name="label_video_high">\t\t高清（1280*720）</string>
    <string name="label_noth_meet">没有相关会议</string>
    <string name="label_noth_log" translatable="false">没有相关日志</string>
    <string name="label_order_news">最新</string>
    <string name="label_order_hot">最热</string>
    <string name="label_order_flag">点赞</string>
    <string name="account_offline">连接断开，请重试登录</string>
    <string name="account_reason_login">另一个用户正以相同的用户 ID 进入讨论区</string>
    <string name="wx_appid">wx9a61fda9d6d2e0fb</string>
    <string name="wx_appsecret">797101d28f353fc581cd05421b251cde</string>
    <string name="start_meeting">发起\n会议</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="seal_login_text_new_user">新用户</string>
    <string name="seal_login_text_forget_password">找回密码</string>
    <string name="seal_login_text_login">登录</string>
    <string name="seal_login_countries_and_regions">国家/地区</string>
    <string name="seal_login_password">密码</string>
    <string name="seal_login_phone_number">手机号</string>
    <string name="seal_login_nick_name">昵称</string>
    <string name="seal_login_register">注册</string>
    <string name="seal_login_code">短信验证码</string>
    <string name="seal_login_send_code">发送验证码</string>
    <string name="seal_login_confirm">确认</string>
    <string name="seal_login_confirm_password">确认密码</string>
    <string name="seal_login_toast_name_is_null">昵称不能为空</string>
    <string name="seal_login_toast_name_contain_spaces">昵称不能包含空格</string>
    <string name="seal_login_toast_phone_number_is_null">手机号不能为空</string>
    <string name="seal_login_toast_code_is_null">验证码为空</string>
    <string name="seal_login_toast_password_is_null">密码不能为空</string>
    <string name="seal_login_toast_password_cannot_contain_spaces">密码不能包含空格</string>
    <string name="seal_login_toast_phone_or_psw_error">手机或者密码错误</string>
    <string name="seal_login_toast_success">"登录成功"</string>
    <string name="seal_login_toast_not_send_code">未向服务端获取验证码</string>
    <string name="seal_login_toast_passwords_invalid">密码必须为6-16位字符，区分大小写</string>
    <string name="seal_login_toast_new_password_not_null">新密码不能为空</string>
    <string name="seal_login_toast_confirm_password_not_null">确认密码不能为空</string>
    <string name="seal_login_toast_passwords_do_not_match">填写的确认密码与新密码不一致</string>
    <string name="login_error_send_message_frequency">短信发送频率超限</string>
    <string name="login_error_captcha_overdue">验证码过期,请重新请求</string>
    <string name="login_verification_code_error">验证码错误</string>
    <string name="seal_login_kick_by_other">您的账号在别的设备上登录，您被迫下线!</string>
    <string name="common_chat_room">聊天室</string>
    <string name="discovery_chat_room_one">聊天室 I</string>
    <string name="discovery_chat_room_two">聊天室 II</string>
    <string name="discovery_chat_room_three">聊天室 III</string>
    <string name="discovery_chat_room_four">聊天室 IV</string>
    <string name="discovery_chat_room_join_failure">加入聊天室失败</string>
    <string name="discovery_join_chat_room_error">聊天室 ID 为空,请稍后重试</string>
    <string name="new_friends">新的朋友</string>
    <string name="group">群组</string>
    <string name="public_service">公众号</string>
    <string name="seal_search_nick_name">昵称： </string>
    <string name="seal_group_list_include">包含：</string>
    <string name="china">中国</string>
    <string name="lang_en">EN</string>
    <string name="lang_english">English</string>
    <string name="lang_chs">简体中文</string>
    <string name="seal_search">搜索</string>
    <string name="beijing">北京</string>
    <string name="common_confirm">确认</string>
    <string name="common_cancel">取消</string>
    <string name="common_done">完成</string>
    <string name="common_save">保存</string>
    <string name="common_publish">发布</string>
    <string name="common_request_success">请求成功</string>
    <string name="common_add_successful">添加成功</string>
    <string name="common_remove_successful">移除成功</string>
    <string name="common_delete_successful">删除成功</string>
    <string name="common_album">相册</string>
    <string name="common_share_success">分享成功</string>
    <string name="common_share_failed">分享失败</string>
    <string name="common_member_count" formatted="true">%d 人</string>
    <string name="common_network_unavailable">当前网络不可用</string>
    <string name="common_network_check">请检查网络设置</string>
    <string-array name="tab_names">
        <item>会话</item>
        <item>通讯录</item>
        <item>发现</item>
        <item>我</item>
    </string-array>
    <string name="common_network_error_and_retry_after">网络问题请稍后重试</string>
    <string name="seal_evaluate_evaluation">评价</string>
    <string name="seal_evaluate_submit_evaluation">提交评价</string>
    <string name="seal_evaluate_resolved_title">请问客服是否解决了您的问题</string>
    <string name="seal_evaluate_resolved">已解决</string>
    <string name="seal_evaluate_unresolved">未解决</string>
    <string name="seal_evaluate_star_title">请您对客服进行评价</string>
    <string name="seal_evaluate_problem_title">存在哪些问题</string>
    <string name="seal_evaluate_title_select_must">存在哪些问题(必选)</string>
    <string name="seal_evaluate_lable_must">必须选择标签</string>
    <string name="seal_evaluate_input_must">必须输入建议</string>
    <string name="seal_conversation_remote_side_is_typing">对方正在输入&#046;&#046;&#046;</string>
    <string name="seal_conversation_remote_side_speaking">对方正在讲话&#046;&#046;&#046;</string>
    <string name="seal_conversation_title_discussion_group">讨论组</string>
    <string name="seal_conversation_title_system">系统消息</string>
    <string name="seal_conversation_title_feedback">意见反馈</string>
    <string name="seal_conversation_title_defult">聊天</string>
    <string name="seal_conversation_sub_group">"群组"</string>
    <string name="seal_conversation_sub_private">"我的私人会话"</string>
    <string name="seal_conversation_sub_discussion">"我的讨论组"</string>
    <string name="seal_conversation_sub_system">"系统消息"</string>
    <string name="seal_conversation_sub_defult">"聊天"</string>
    <string name="seal_conversation_read_receipt_detail">回执详情</string>
    <string name="seal_conversation_read_receipt_unread_persons_format">%1$d 人未读</string>
    <string name="user_account">个人资料</string>
    <string name="countus">联系我们</string>
    <string name="aboutus">关于我们</string>
    <string name="checkUpdate">更新检测</string>
    <string name="meetingSetting">教室设置</string>
    <string name="login_out">安全退出</string>
</resources>